packages/typ/tests/fixtures/diagnostics/0909_gadt_operator_on_wrong_branch_05.ml.infer.expected
File "0909_gadt_operator_on_wrong_branch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0909_gadt_operator_on_wrong_branch_05 is not a valid module name.

File "0909_gadt_operator_on_wrong_branch_05.ml", line 11, characters 23-24:
11 |     | WBool_epsilon -> x + 5
                            ^
Error: The value x has type a = bool but an expression was expected of type
         int
